# virtual-biotech

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
scripts/: bench_mcp.py
src/virtual_biotech/: __init__.py  config.py  orchestrator.py
src/virtual_biotech/agents/: __init__.py  chief_of_staff.py  cso.py  scientific_reviewer.py
src/virtual_biotech/agents/clinical_officers/: __init__.py  clinical_trialist.py  fda_safety_officer.py
src/virtual_biotech/agents/modality_selection/: __init__.py  pharmacologist.py  target_biologist.py
src/virtual_biotech/agents/target_id/: __init__.py  functional_genomics.py  single_cell_atlas.py  statistical_genetics.py
src/virtual_biotech/agents/target_safety/: __init__.py  bio_pathways_ppi.py  fda_safety_officer.py  single_cell_atlas.py
src/virtual_biotech/analysis/: __init__.py  hallmarks.py  spatial.py  specificity.py  statistics.py
src/virtual_biotech/mcp_servers/: __init__.py  _sources.py  biological_interactions.py  biological_pathways.py  clinical_trials.py  diseases.py  drugs.py  functional_genomics.py  health_check.py  human_genetics.py  molecular_targets.py  single_cell_atlas.py  tissue_expression.py
src/virtual_biotech/schemas/: agent_outputs.py  clinical_trial.py
src/virtual_biotech/skills/: __init__.py  single_cell_de.py  single_cell_qc.py  spatial_analysis.py
src/virtual_biotech/ui/: agent_display.py  app.py  message_handler.py
src/virtual_biotech/ui/pages/: mcp_overview.py
tests/: test_agents.py  test_analysis.py  test_audit_tracker.py  test_mcp_servers.py  test_schemas.py  test_sources.py
